refactor: change a image format in assets folder

--- a/index.html
+++ b/index.html
@@ -1,13 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@400;600&family=Josefin+Sans:wght@300;400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>The Tasteat - restaurant for you</title>
 </head>
+
 <body>
 
+    <header class="header">
+        <div class="container header__content">
+            <div class="header__info">
+                <div class="telephone">
+                    <a href="tel:+123456789">Call - 123 456 789</a>
+                </div>
+                <div class="logo">
+                    <img src="./assets/icons/logo.png" alt="The Tasteat logo" class="logo-img">
+                </div>
+                <div class="header__btn">
+                    <button class="btn btn--color">Reservation</button>
+                </div>
+            </div>
+
+            <div class="header__nav">
+                <nav class="nav">
+                    <ul class="nav__list">
+                        <li><a href="#" class="nav__link">Home</a></li>
+                        <li><a href="#" class="nav__link">About Us</a></li>
+                        <li><a href="#" class="nav__link">Our Menu</a></li>
+                        <li><a href="#" class="nav__link">Pages</a></li>
+                        <li><a href="#" class="nav__link">Blog</a></li>
+                        <li><a href="#" class="nav__link">Contact Us</a></li>
+                    </ul>
+                </nav>
+                <ul class="social-links">
+                    <li><a href="#"><img src="./assets/icons/instagram-icon.png" alt="instagram"></a></li>
+                    <li><a href="#"><img src="./assets/icons/facebook-icon.png" alt="facebook"></a></li>
+                    <li><a href="#"><img src="./assets/icons/twitter-icon.png" alt="twitter"></a></li>
+                    <li><a href="#"><img src="./assets/icons/pinterest-icon.png" alt="pinterest"></a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+
+
+
+
+    <section class="hero">
+        <div class="container hero__content">
+            <div class="hero__text">
+                <h1 class="hero__title">Welcome to Restaurant</h1>
+                <p>The people, food and the prime locations make the perfect place good friends & family to come
+                    together and have great time.
+                </p>
+                <div class="hero__btn">
+                    <button class="btn btn--border">View Menu</button>
+                </div>
+            </div>
+            <div class="hero__img">
+                <img src="./assets/images/hero-img.png" alt="photo of cozy interior in restaurant">
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <section class="information">
+        <div class="container information__content">
+            <div class="information__block">
+                <h3>Locate Us</h3>
+                <a href="https://goo.gl/maps/dAXusTSXBEw541JV8">Riverside 25, San Diego, California</a>
+            </div>
+            <div class="information__block">
+                <h3>Open Hours</h3>
+                <span>Mon To Fri 9:00 AM - 9:00 PM</span>
+            </div>
+            <div class="information__block">
+                <h3>Reservation</h3>
+                <a href="mailto:restaurantate@gmail.com">restaurantate@gmail.com</a>
+            </div>
+        </div>
+    </section>
+
+
+
+
+    <section class="storytelling">
+        <div class="container storytelling__content">
+            <div class="storytelling__img">
+                <img src="./assets/images/storytelling-img.jpg" alt="tables in restaurant">
+            </div>
+
+            <div class="storytelling__text">
+                <h2>The Delicious Story</h2>
+                <p>The people, food and the prime locations make the perfect place for the friends & family to come
+                    together and have great time.</p>
+
+                <div class="storytelling__block">
+                    <span>2018</span>
+                    <p>Plan for this restaurant to deliver healthy food.</p>
+                    <span>2022</span>
+                    <p>Happily in the fourth year by fulfill the motto.</p>
+                </div>
+
+                <div class="storytelling__autograph">
+                    <span>Josefine</span>
+                    <img src="./assets/icons/autograph.png" alt="autograph">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="menu">
+        <div class="container menu__content">
+            <span class="section__title">Menu</span>
+
+            <div class="menu__card">
+                <h2>Try Our Special dishes</h2>
+                <p>Every time you perfectly dine with us, it should happy for great inspired food in an environment
+                    designed with individual touches unique to the local area.</p>
+                <img src="./assets/images/menu-img.jpg" alt="apricot pie">
+                <div class="menu__btn">
+                    <button class="btn btn--border">See all dishes</button>
+                </div>
+            </div>
+
+            <div class="menu__gallery">
+                <div class="menu__category">
+                    <h3>Starters</h3>
+                    <div class="menu__item">
+                        <img src="./assets/images/menu-starters-01.png" alt="Raw Scallops from Erquy">
+                        <h4>Raw Scallops from Erquy</h4>
+                        <p>Shuck the scallop to that used for oysters</p>
+                        <span>$40</span>
+                    </div>
+                    <div class="menu__item">
+                        <img src="./assets/images/menu-starters-02.png" alt="Spring Roll">
+                        <h4>Spring Roll</h4>
+                        <p>Add oil to a hot pan spring onion whites</p>
+                        <span>$20</span>
+                    </div>
+                    <div class="menu__item">
+                        <img src="./assets/images/menu-starters-03.png" alt="French Onion Soup">
+                        <h4>French Onion Soup</h4>
+                        <p>Wheat flour, apple cider vinegar, bread</p>
+                        <span>$25</span>
+                    </div>
+                    <div class="menu__item">
+                        <img src="./assets/images/menu-starters-04.png" alt="Tomato Bruschetta">
+                        <h4>Tomato Bruschetta</h4>
+                        <p>Bread, olive oil, garlic, black pepper</p>
+                        <span>$40</span>
+                    </div>
+
+
+
+
+
+                    <div class="menu__item">
+                        <img src="" alt="">
+                        <h4></h4>
+                        <p></p>
+                        <span></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
