--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@
 
 
 
-    <section class="menu">
-        <div class="container menu__content">
-            <span class="section__title">Menu</span>
-
+    <section class="menu-bg">
+        <div class="container menu">
             <div class="menu__card">
-                <h2>Try Our Special dishes</h2>
-                <p>Every time you perfectly dine with us, it should happy for great inspired food in an environment
-                    designed with individual touches unique to the local area.</p>
+                <div class="section-heading menu__heading">
+                    <span class="accent-title">Menu</span>
+                    <h2>Try Our Special dishes</h2>
+                    <p>Every time you perfectly dine with us, it should happy for great inspired food in an environment
+                        designed with individual touches unique to the local area.</p>
+                </div>
                 <img src="./assets/images/menu-img.jpg" alt="apricot pie">
                 <div class="menu__btn">
                     <button class="btn btn--border">See all dishes</button>
@@ -163,33 +164,344 @@
                         <p>Bread, olive oil, garlic, black pepper</p>
                         <span>$40</span>
                     </div>
+                </div>
 
 
-
-
-
+                <div class="menu__category">
+                    <h3>Main Dish</h3>
                     <div class="menu__item">
-                        <img src="" alt="">
-                        <h4></h4>
-                        <p></p>
-                        <span></span>
+                        <img src="./assets/images/menu-main-01.png" alt="Grilled Salmon with Dill Sauce">
+                        <h4>Grilled Salmon with Dill Sauce</h4>
+                        <p>Brown sugar, salmon fillet, Dijon mustard</p>
+                        <span>$40</span>
+                    </div>
+                    <div class="menu__item">
+                        <img src="./assets/images/menu-main-02.png" alt="Roast Beef with Vegetable">
+                        <h4>Roast Beef with Vegetable</h4>
+                        <p>Green beans, rib eye, olive oil, beef</p>
+                        <span>$20</span>
+                    </div>
+                    <div class="menu__item">
+                        <img src="./assets/images/menu-main-03.png" alt="Marrkesh Vegetetarian Curruy">
+                        <h4>Marrkesh Vegetetarian Curruy</h4>
+                        <p>Sweet potato, eggplant, garbanzo bean</p>
+                        <span>$25</span>
+                    </div>
+                    <div class="menu__item">
+                        <img src="./assets/images/menu-main-04.png" alt="Spicy Vegan Potato Curry">
+                        <h4>Spicy Vegan Potato Curry</h4>
+                        <p>Coconut milk, beans, potatoes, curry powder</p>
+                        <span>$35</span>
+                    </div>
+                </div>
+
+
+
+                <div class="menu__category">
+                    <h3>Dessert</h3>
+                    <div class="menu__item">
+                        <img src="./assets/images/menu-dessert-01.png" alt="Apple Pie with Cream">
+                        <h4>Apple Pie with Cream</h4>
+                        <p>Whipping cream, egg white, cinnamon</p>
+                        <span>$15</span>
+                    </div>
+                    <div class="menu__item">
+                        <img src="./assets/images/menu-dessert-02.png" alt="Lemon Meringue Pie">
+                        <h4>Lemon Meringue Pie</h4>
+                        <p>Frozen pie crust, meringue, lemon</p>
+                        <span>$30</span>
                     </div>
                 </div>
             </div>
         </div>
+    </section>
 
+
+    <section class="testimonial-bg">
+        <div class="container testimonial">
+            <div class="section-heading testimonial__heading"></div>
+            <span class="accent-title">Testimonial</span>
+            <h2>Our clients say</h2>
+            <p>We love to hear from customers, so please leave a comment or say hello in an email.</p>
+        </div>
+
+        <div class="testimonial__block">
+            <div class="testimonial__card">
+                <div class="testimonial__autor autor">
+                    <img src="./assets/images/testimonial-autor-01.png" alt="Natasha D photo" class="autor__img">
+                    <h4 class="autor__name">Natasha D</h4>
+                    <span class="autor__place">Newyork</span>
+                </div>
+                <div class="testimonial__text">
+                    <p>
+                        They known for its fabulous taste and food. Anywhere you go your hunger is satisfied. The
+                        best chicken & burgers those are yummy.
+                    </p>
+                </div>
+            </div>
+
+
+            <div class="testimonial__card">
+                <div class="testimonial__autor autor">
+                    <img src="./assets/images/testimonial-autor-02.png" alt="Jack Sparrow photo" class="autor__img">
+                    <h4 class="autor__name">Jack Sparrow</h4>
+                    <span class="autor__place">Salt Lake City</span>
+                </div>
+                <div class="testimonial__text">
+                    <p>
+                        I have visited this fantastic restaurant on several occasions, food is absolutely
+                        outstanding & attention to detail is in league of its own.
+                    </p>
+                </div>
+            </div>
+
+
+            <div class="testimonial__card">
+                <div class="testimonial__autor autor">
+                    <img src="./assets/images/testimonial-autor-03.png" alt="Martin photo" class="autor__img">
+                    <h4 class="autor__name">Martin</h4>
+                    <span class="autor__place">San Diego</span>
+                </div>
+                <div class="testimonial__text">
+                    <p>
+                        Perfectly known for its fabulous taste and food. Anywhere your hunger is satisfied. They
+                        give best fried chicken and burgers those are yummy.
+                    </p>
+                </div>
+            </div>
+        </div>
+        </div>
+        <div class="testimonial__bg-img">
+            <img src="./assets/images/testimonial-img.jpg" alt="cozy lights">
+        </div>
     </section>
 
 
 
+    <section class="offers-bg">
+        <div class="container offers">
+            <div class="section-heading offers__heading">
+                <span class="accent-title">Offers</span>
+                <h2>Our Offer dishes</h2>
+                <p>Our chefs create melt-in-your-mouth dishes that'll satiate even the fussiest eaters now the dishes
+                    are in
+                    offers use it based on hunger.</p>
+            </div>
+
+            <div class="offers__block">
+                <div class="offer-card">
+                    <div class="offer-card__price">
+                        <span>Only</span>
+                        <span>10$</span>
+                    </div>
+                    <div class="offer-card__text">
+                        <span>50% Offer Going</span>
+                        <h3>Chicken Burger</h3>
+                        <p>Chicken burger with the tasty toppings and leaves.</p>
+                    </div>
+                    <div class="offer-card__img">
+                        <img src="./assets/images/offers-burger-img.png" alt="tasty burger">
+                    </div>
+                </div>
+
+                <div class="offer-card">
+                    <div class="offer-card__price">
+                        <span>Only</span>
+                        <span>9$</span>
+                    </div>
+                    <div class="offer-card__text">
+                        <span>50% Offer Going</span>
+                        <h3>Chicken Pizza</h3>
+                        <p>Pizza with multiple flavor and the toping are mixed.</p>
+                    </div>
+                    <div class="offer-card__img">
+                        <img src="./assets/images/offers-pizza-img.png" alt="tasty pizza">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
+    <section class="gallery-bg">
+        <div class="container gallery">
+            <div class="section-heading gallery__heading">
+                <span class="accent-title">Galery</span>
+                <h2>Popular Dishes</h2>
+                <p>There is a game between the waiters in restaurant to see who serves the food to each table fastest.
+                    That led to attempting the Guinness Record.</p>
+            </div>
+
+            <div class="gallery__block">
+                <div class="gallery__card card">
+                    <img src="./assets/images/dishes-img-01.jpg" alt="Chicken Manjoori">
+                    <h4>Chicken Manjoori</h4>
+                    <span>$15</span>
+                    <p>Dish relished by all age groups as a starter dish at parties.</p>
+                </div>
+
+                <div class="gallery__card card">
+                    <img src="./assets/images/dishes-img-02.jpg" alt="Hotdog">
+                    <h4>Hotdog</h4>
+                    <span>$10</span>
+                    <p>Grilled sausage served in the slit of a partially sliced bun.</p>
+                </div>
+
+                <div class="gallery__card card">
+                    <img src="./assets/images/dishes-img-03.jpg" alt="Fresh Salmon">
+                    <h4>Fresh Salmon</h4>
+                    <span>$5</span>
+                    <p>Beat the health blues with our Super Immune Blue Juice Recipe.</p>
+                </div>
+
+                <div class="gallery__card card">
+                    <img src="./assets/images/dishes-img-04.jpg" alt="Veg Burger">
+                    <h4>Veg Burger</h4>
+                    <span>$10</span>
+                    <p>Burgers may be made from ingredients like beans.</p>
+                </div>
+            </div>
+
+            <div class="gallery__btn">
+                <button class="btn btn--border">See all dishes</button>
+            </div>
+        </div>
+    </section>
 
 
 
+    <section class="advantages-bg">
+        <div class="container advantages">
+            <div class="section-heading advantages__heading">
+                <span class="accent-title">What we offer</span>
+                <h2>Our Great Services</h2>
+                <p>The atmosphere set the stage. It’s about more than just a dining room away from your home. Food takes
+                    the spotlight as guests.</p>
+            </div>
+
+            <div class="advantages__block">
+                <div class="advantages__card">
+                    <img src="./assets/icons/calendar-icon.png" alt="calendar">
+                    <span>Opened 24/7</span>
+                </div>
+                <div class="advantages__card">
+                    <img src="./assets/icons/menu-icon.png" alt="menu">
+                    <span>Special Menus</span>
+                </div>
+                <div class="advantages__card">
+                    <img src="./assets/icons/delivery-icon.png" alt="delivery">
+                    <span>Home Delivery</span>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
+    <section class="blog-bg">
+        <div class="container blog">
+            <div class="section-heading blog__heading">
+                <span class="accent-title">Blog</span>
+                <h2>Be First Who Read News</h2>
+                <p>Explore the latest stories about our dishes, offers, events and future plans here.</p>
+            </div>
+
+            <div class="blog__block">
+                <div class="blog__preview preview">
+                    <div class="preview__btn">
+                        <img src="./assets/images/blog-img-01.jpg" alt="pizza">
+                        <button class="btn--color">View More</button>
+                    </div>
+                    <div class="preview__tags">
+                        <span class="accent-title">Delicious</span>
+                        <span class="accent-title">March 19, 2022</span>
+                    </div>
+                    <div class="preview__text">
+                        <h3>The Legend of US Cuisine: The Story of Hungry People</h3>
+                        <p>Capitalize on low-hanging fruit to identify a ballpark value added matrix economically and
+                            the creative activity to beta test override the food quality.</p>
+                    </div>
+                </div>
+
+                <div class="blog__preview preview">
+                    <div class="preview__btn">
+                        <img src="./assets/images/blog-img-02.jpg" alt="barbecue">
+                        <button class="btn--color">View More</button>
+                    </div>
+                    <div class="preview__tags">
+                        <span class="accent-title">Cooking</span>
+                        <span class="accent-title">March 19, 2022</span>
+                    </div>
+                    <div class="preview__text">
+                        <h3>The Most Popular Delicious Food of Mediterranean Cuisine</h3>
+                        <p>Strategies on low-hanging fruit to identify a ballpark value added matrix economically and
+                            the creative activity to beta test override the food quality.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="reservation-bg">
+        <div class="container">
+            <div class="reservation">
+                <span class="accent-title">reservation</span>
+                <form action="#">
+                    <legend>Book Your Table</legend>
+                    <input type="text" name="text" id="#" placeholder="Name">
+                    <input type="email" name="email" id="#" placeholder="Email">
+                    <input type="text" name="text" id="#" placeholder="Person">
+                    <input type="datetime" name="datetime" id="#" placeholder="Timing">
+                    <input type="date" name="date" id="#" placeholder="Date">
+                    <input type="submit" value="Book A Table">
+                </form>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="subscribe-bg">
+        <div class="container subscribe">
+            <img src="./assets/icons/logo.png" alt="logo">
+            <p>Join our mailing list for updates, Get news & offers events.</p>
+            <form action="#" class="subscribe__form">
+                <input type="email" name="email" id="#" placeholder="Email">
+                <input type="submit" value="Subscribe">
+            </form>
+        </div>
+    </section>
+
+
+
+    <footer>
+        <div class="container footer">
+            <div class="contact">
+                <span class="accent-title">Contact</span>
+                <ul class="contact__list">
+                    <li><a href="https://goo.gl/maps/LXrqbjUSoqokkDgF8">5 Rue Dalou, 75015 Paris</a></li>
+                    <li><a href="tel:+123456789">+123 456 789</a></li>
+                    <li><a href="mailto:josefin@mail.com">josefin@mail.com</a></li>
+                </ul>
+                <ul class="contact__social-links social-links">
+                    <li><a href="#"><img src="./assets/icons/instagram-icon.png" alt="instagram"></a></li>
+                    <li><a href="#"><img src="./assets/icons/facebook-icon.png" alt="facebook"></a></li>
+                    <li><a href="#"><img src="./assets/icons/twitter-icon.png" alt="twitter"></a></li>
+                    <li><a href="#"><img src="./assets/icons/pinterest-icon.png" alt="pinterest"></a></li>
+                </ul>
+            </div>
+            <div class="working-hours">
+                <span class="accent-title">Working hours</span>
+                <ul class="working-hours__list">
+                    <li><span class="working-hours__days">Mon - Fri:</span><span class="working-hours__times">7.00am - 6.00pm</span></li>
+                    <li><span class="working-hours__days">Sat:</span><span class="working-hours__times">7.00am - 6.00pm</span></li>
+                    <li><span class="working-hours__days">Sun:</span><span class="working-hours__times">8.00am - 6.00pm</span></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 
 
