feat: add basic styles

--- a/index.html
+++ b/index.html
@@ -219,60 +219,60 @@
 
     <section class="testimonial-bg">
         <div class="container testimonial">
-            <div class="section-heading testimonial__heading"></div>
-            <span class="accent-title">Testimonial</span>
-            <h2>Our clients say</h2>
-            <p>We love to hear from customers, so please leave a comment or say hello in an email.</p>
-        </div>
-
-        <div class="testimonial__block">
-            <div class="testimonial__card">
-                <div class="testimonial__autor autor">
-                    <img src="./assets/images/testimonial-autor-01.png" alt="Natasha D photo" class="autor__img">
-                    <h4 class="autor__name">Natasha D</h4>
-                    <span class="autor__place">Newyork</span>
-                </div>
-                <div class="testimonial__text">
-                    <p>
-                        They known for its fabulous taste and food. Anywhere you go your hunger is satisfied. The
-                        best chicken & burgers those are yummy.
-                    </p>
-                </div>
+            <div class="section-heading testimonial__heading">
+                <span class="accent-title">Testimonial</span>
+                <h2>Our clients say</h2>
+                <p>We love to hear from customers, so please leave a comment or say hello in an email.</p>
             </div>
 
-
-            <div class="testimonial__card">
-                <div class="testimonial__autor autor">
-                    <img src="./assets/images/testimonial-autor-02.png" alt="Jack Sparrow photo" class="autor__img">
-                    <h4 class="autor__name">Jack Sparrow</h4>
-                    <span class="autor__place">Salt Lake City</span>
+            <div class="testimonial__block">
+                <div class="testimonial__card">
+                    <div class="testimonial__autor autor">
+                        <img src="./assets/images/testimonial-autor-01.png" alt="Natasha D photo" class="autor__img">
+                        <h4 class="autor__name">Natasha D</h4>
+                        <span class="autor__place">Newyork</span>
+                    </div>
+                    <div class="testimonial__text">
+                        <p>
+                            They known for its fabulous taste and food. Anywhere you go your hunger is satisfied. The
+                            best chicken & burgers those are yummy.
+                        </p>
+                    </div>
                 </div>
-                <div class="testimonial__text">
-                    <p>
-                        I have visited this fantastic restaurant on several occasions, food is absolutely
-                        outstanding & attention to detail is in league of its own.
-                    </p>
+
+
+                <div class="testimonial__card">
+                    <div class="testimonial__autor autor">
+                        <img src="./assets/images/testimonial-autor-02.png" alt="Jack Sparrow photo" class="autor__img">
+                        <h4 class="autor__name">Jack Sparrow</h4>
+                        <span class="autor__place">Salt Lake City</span>
+                    </div>
+                    <div class="testimonial__text">
+                        <p>
+                            I have visited this fantastic restaurant on several occasions, food is absolutely
+                            outstanding & attention to detail is in league of its own.
+                        </p>
+                    </div>
+                </div>
+
+
+                <div class="testimonial__card">
+                    <div class="testimonial__autor autor">
+                        <img src="./assets/images/testimonial-autor-03.png" alt="Martin photo" class="autor__img">
+                        <h4 class="autor__name">Martin</h4>
+                        <span class="autor__place">San Diego</span>
+                    </div>
+                    <div class="testimonial__text">
+                        <p>
+                            Perfectly known for its fabulous taste and food. Anywhere your hunger is satisfied. They
+                            give best fried chicken and burgers those are yummy.
+                        </p>
+                    </div>
                 </div>
             </div>
-
-
-            <div class="testimonial__card">
-                <div class="testimonial__autor autor">
-                    <img src="./assets/images/testimonial-autor-03.png" alt="Martin photo" class="autor__img">
-                    <h4 class="autor__name">Martin</h4>
-                    <span class="autor__place">San Diego</span>
-                </div>
-                <div class="testimonial__text">
-                    <p>
-                        Perfectly known for its fabulous taste and food. Anywhere your hunger is satisfied. They
-                        give best fried chicken and burgers those are yummy.
-                    </p>
-                </div>
+            <div class="testimonial__bg-img">
+                <img src="./assets/images/testimonial-img.jpg" alt="cozy lights">
             </div>
-        </div>
-        </div>
-        <div class="testimonial__bg-img">
-            <img src="./assets/images/testimonial-img.jpg" alt="cozy lights">
         </div>
     </section>
 
@@ -495,9 +495,12 @@
             <div class="working-hours">
                 <span class="accent-title">Working hours</span>
                 <ul class="working-hours__list">
-                    <li><span class="working-hours__days">Mon - Fri:</span><span class="working-hours__times">7.00am - 6.00pm</span></li>
-                    <li><span class="working-hours__days">Sat:</span><span class="working-hours__times">7.00am - 6.00pm</span></li>
-                    <li><span class="working-hours__days">Sun:</span><span class="working-hours__times">8.00am - 6.00pm</span></li>
+                    <li><span class="working-hours__days">Mon - Fri:</span><span class="working-hours__times">7.00am -
+                            6.00pm</span></li>
+                    <li><span class="working-hours__days">Sat:</span><span class="working-hours__times">7.00am -
+                            6.00pm</span></li>
+                    <li><span class="working-hours__days">Sun:</span><span class="working-hours__times">8.00am -
+                            6.00pm</span></li>
                 </ul>
             </div>
         </div>
