--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header">
         <div class="container header__content">
             <div class="header__info">
-                <div class="telephone">
+                <div class="btn btn--border">
                     <a href="tel:+123456789">Call - 123 456 789</a>
                 </div>
                 <div class="logo">
