feat: style testimonial section + make responsive

--- a/index.html
+++ b/index.html
@@ -317,7 +317,9 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/images/testimonial-img.jpg" alt="cozy lights">
+        <div class="testimonial__img">
+            <!-- <img src="./assets/images/testimonial-img.jpg" alt="cozy lights"> -->
+        </div>
     </section>
 
 
